lib/installers/k8s/gitea/templates/tfgw.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: @{config_values.namespace}
