lib/installers/k8s/gitea/templates/postgres.yaml
apiVersion: v1
kind: Pod
metadata:
  name: @{config_values.db_host}
  namespace: @{config_values.namespace}
  labels:
    app: @{config_values.db_host}
spec:
  containers:
  - name: postgres
    image: postgres:16-alpine
    ports:
    - containerPort: 5432
      name: postgres
    volumeMounts:
    - name: postgres-storage
      mountPath: /var/lib/postgresql/data
  volumes:
  - name: postgres-storage
    persistentVolumeClaim:
      claimName: postgres-data
---
apiVersion: v1
kind: Service
metadata:
  name: @{config_values.db_host}
  namespace: @{config_values.namespace}
spec:
  selector:
    app: @{config_values.db_host}
  ports:
  - port: 5432
    targetPort: 5432
    name: postgres
  type: ClusterIP
